@@ -5,11 +5,12 @@ import net.minecraft.core.Registry;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.network.chat.CommonComponents;
 import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.TextColor;
 import net.minecraft.resources.Identifier;
 import net.minecraft.server.level.ServerLevel;
-import net.minecraft.util.ARGB;
 import net.minecraft.util.Mth;
 import net.minecraft.util.RandomSource;
+import net.minecraft.util.random.WeightedRandom;
 import net.minecraft.world.DifficultyInstance;
 import net.minecraft.world.damagesource.DamageType;
 import net.minecraft.world.entity.Entity;
@@ -20,19 +21,20 @@ import net.minecraft.world.entity.ai.attributes.AttributeInstance;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
+import org.apache.commons.lang3.mutable.MutableInt;
 import org.jetbrains.annotations.Nullable;
+import top.theillusivec4.champions.Champions;
 import top.theillusivec4.champions.attachment.Attachments;
 import top.theillusivec4.champions.champion.Affixes;
 import top.theillusivec4.champions.champion.ChampionDefaultConfigs;
 import top.theillusivec4.champions.champion.ChampionHandler;
 import top.theillusivec4.champions.champion.ChampionUtil;
 import top.theillusivec4.champions.champion.affix.Affix;
-import top.theillusivec4.champions.champion.affix.Damage;
 import top.theillusivec4.champions.champion.rank.Rank;
 import top.theillusivec4.champions.registry.Registries;
+import top.theillusivec4.champions.server.champion.ChampionConfig;
 import top.theillusivec4.champions.server.level.ServerChampionBossEvent;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -41,6 +43,7 @@ import java.util.stream.Collectors;
 /**
  * 专用于实体的冠军处理程序
  */
+@SuppressWarnings("unused")
 public interface ChampionHandlerEntity extends ChampionHandler {
   Entity entity();
 
@@ -92,11 +95,6 @@ public interface ChampionHandlerEntity extends ChampionHandler {
   @Override
   default Optional<Integer> getLevel() {
     return this.entity().getExistingData(Attachments.LEVEL);
-//    if (this.entity().hasData(Attachments.LEVEL)) {
-//      return Optional.of(this.entity().getData(Attachments.LEVEL));
-//    } else {
-//      return this.getRank().map(rank -> rank.value().level());
-//    }
   }
 
   @Override
@@ -109,18 +107,13 @@ public interface ChampionHandlerEntity extends ChampionHandler {
   }
 
   @Override
-  default Optional<Integer> getColor() {
-    return this.entity().getExistingData(Attachments.COLOR);
-//    if (this.entity().hasData(Attachments.COLOR)) {
-//      return Optional.of(this.entity().getData(Attachments.COLOR));
-//    }
-//
-//    return this.getRank().map(rank -> rank.value().color());
+  default Optional<TextColor> getColor() {
+    return this.entity().getData(Attachments.COLOR);
   }
 
   @Override
-  default void setColor(int color) {
-    this.entity().setData(Attachments.COLOR, ARGB.opaque(color));
+  default void setColor(TextColor color) {
+    this.entity().setData(Attachments.COLOR, Optional.of(color));
   }
 
   @Override
@@ -157,7 +150,7 @@ public interface ChampionHandlerEntity extends ChampionHandler {
             .append(CommonComponents.space())
             .append(this.entity().getDisplayName())
           ).orElse(this.entity().getDisplayName());
-        this.setBossEvent(new ServerChampionBossEvent(Mth.createInsecureUUID(this.entity().getRandom()), name, this.getHealth() / this.getMaxHealth(), this.getLevelOrDefault(), this.getColorOrDefault(), this.getAffixesOrDefault().getAffixes()));
+        this.setBossEvent(new ServerChampionBossEvent(Mth.createInsecureUUID(this.entity().getRandom()), name, this.getHealth() / this.getMaxHealth(), this.getLevelOrDefault(), this.getColorOrDefault().getValue(), this.getAffixesOrDefault().getAffixes()));
       } else {
         this.setBossEvent(null);
       }
@@ -181,75 +174,58 @@ public interface ChampionHandlerEntity extends ChampionHandler {
   }
 
   default void doFinalizeSpawn(ServerLevel level, double x, double y, double z, DifficultyInstance difficultyInstance, EntitySpawnReason reason) {
-    if (!this.isValid()) {
-      /*
-        思路：区域难度 -> 等级 -> Rank（提供前缀名，每等级颜色，等级区间（根据前一步计算出的等级判断是否可用），词缀，战利品表等）
-        简述：生物（Mob）在生成初始化阶段时（FinalizeSpawn，处理生物装备盔甲，僵尸鸡骑士，灾厄队长等的阶段）
-              获取所在位置的区域难度，从区域难度计算该生物的冠军等级，从等级寻找可用的Rank，并从所有可用的Rank中随机抽取并应用于生物。
+          /*
+            思路：区域难度 -> 等级 -> Rank（提供前缀名，每等级颜色，等级区间（根据前一步计算出的等级判断是否可用），词缀，战利品表等）
+            简述：生物（Mob）在生成初始化阶段时（FinalizeSpawn，处理生物装备盔甲，僵尸鸡骑士，灾厄队长等的阶段）
+                  获取所在位置的区域难度，从区域难度计算该生物的冠军等级，从等级寻找可用的Rank，并从所有可用的Rank中随机抽取并应用于生物。
 
-        例：猎杀者
-            等级：[1, 3]
-            颜色：[color_1, color_2, color_3] , default_color
-            词缀：[]
-            战利品表：LootTableId 用于额外的掉落
+            例：猎杀者
+                等级：[1, 3]
+                颜色：[color_1, color_2, color_3] , default_color
+                词缀：[]
+                战利品表：LootTableId 用于额外的掉落
 
-        难度映射等级计算方式：
-          Minecraft区域难度，简单：[0.75-1.5]，普通：[1.5-4.0]，困难：[2.25-6.75]
-          将区域难度进行四舍五入，并将值钳制在最小最大等级之间，目前为[1, 5]
-          而后根据计算得出的等级，匹配可用的Rank，并为实体应用。
+            难度映射等级计算方式：
+              Minecraft区域难度，简单：[0.75-1.5]，普通：[1.5-4.0]，困难：[2.25-6.75]
+              将区域难度进行取整得到原始等级，并将原始等级钳制在最小最大等级之间，目前为[1, 5]
+              而后根据计算得出的等级，匹配可用的Rank，并为实体应用。
 
-        等级映射词缀数量计算方式：
-          总词缀数量 = 等级依赖函数：
-                          最小值：基础词缀数量（默认为1） + 除去第一级外的每级数量（默认为1）
-                          最大值：5
+            等级映射词缀数量计算方式：
+              总词缀数量 = 等级依赖函数：
+                              最小值：基础词缀数量（默认为1） + 除去第一级外的每级数量（默认为1）
+                              最大值：5
        */
-
-      // 等级
+    if (!this.isValid()) {
       RandomSource random = level.getRandom();
-      int championLevel = random.nextInt((int) Math.clamp(difficultyInstance.getEffectiveDifficulty(), 1, 5), 6);
+      // 等级
+      MutableInt mutableInt = new MutableInt(Math.clamp((int) difficultyInstance.getEffectiveDifficulty(), 1, 5));
+      Optional.ofNullable(Champions.getInstance().getLevelConfigManager().byLevel(level)).ifPresent(championConfig -> mutableInt.setValue(championConfig.calculateLevel(difficultyInstance.getDifficulty(), mutableInt.get().intValue())));
+      this.getConfig().ifPresent(championConfig -> mutableInt.setValue(championConfig.calculateLevel(difficultyInstance.getDifficulty(), mutableInt.get().intValue())));
+      int championLevel = mutableInt.get().intValue();
+      this.setLevel(championLevel);
+
+      // 头衔
       Registry<Rank> ranks = level.registryAccess().lookupOrThrow(Registries.RANK);
-      List<Holder<Rank>> filteredRanks = ranks.stream().filter(rank -> rank.level().matches(championLevel)).map(ranks::wrapAsHolder).toList();
-
-      if (!filteredRanks.isEmpty()) {
-        int totalWeight = filteredRanks.stream().mapToInt(rank -> rank.value().weight()).sum();
-        int targetWeight = random.nextInt(1, totalWeight);
-        int currentWeight = 0;
-        Holder<Rank> rank = null;
-        for (Holder<Rank> rank1 : filteredRanks) {
-          currentWeight += rank1.value().weight();
-          if (currentWeight >= targetWeight) {
-            rank = rank1;
-            break;
-          }
-        }
-
-        if (rank != null) {
-          int minAffix = (int) rank.value().minAffix().calculate(championLevel);
-          int maxAffix = (int) rank.value().maxAffix().calculate(championLevel);
-          int affixCount =  minAffix < maxAffix ? random.nextInt(minAffix, maxAffix) : minAffix == maxAffix ? minAffix : 0;
-
-          this.setRank(rank);
-          this.setColor(rank.value().getColor(championLevel).getValue());
-          this.setLevel(championLevel);
-          //  词缀
-          Registry<Affix> affixes = level.registryAccess().lookupOrThrow(Registries.AFFIX);
-          List<Holder<Affix>> list =  affixes.stream().map(affixes::wrapAsHolder).collect(Collectors.toList());
-          Collections.shuffle(list);
-          this.updateAffixes(mutable -> {
-            int i = 0;
-            for (Holder<Affix> affix : list) {
-              i++;
-              mutable.add(affix);
-              if (i >= affixCount) {
-                break;
-              }
+      Registry<Affix> affixes = level.registryAccess().lookupOrThrow(Registries.AFFIX);
+      Holder<Rank> rank = WeightedRandom.getRandomItem(random, ranks.stream().filter(rank1 -> rank1.matches(championLevel)).toList(), Rank::weight).map(ranks::wrapAsHolder).orElse(null);
+      if (rank != null) {
+        this.setRank(rank);
+        this.setColor(rank.value().getColor(championLevel));
+        // 词缀
+        List<Holder<Affix>> list = affixes.stream().map(affixes::wrapAsHolder).collect(Collectors.toList());
+        Collections.shuffle(list);
+        this.updateAffixes(mutable -> {
+          int i = 0;
+          for (Holder<Affix> affix : list) {
+            mutable.add(affix);
+            i++;
+            if (i >= championLevel) {
+              break;
             }
-          });
-        }
-
-
+          }
+        });
+        this.setBoss(rank.value().boss());
       }
-
 
     }
   }
@@ -273,6 +249,10 @@ public interface ChampionHandlerEntity extends ChampionHandler {
 
   default boolean isLatestDamageType(Holder<DamageType> damageType) {
     return this.getLatestDamageType().map(damageType1 -> damageType1 == damageType).orElse(false);
+  }
+
+  default Optional<@Nullable ChampionConfig> getConfig() {
+    return Optional.ofNullable(Champions.getInstance().getEntityConfigManager().byEntity(this.entity()));
   }
 
   /**
@@ -321,36 +301,6 @@ public interface ChampionHandlerEntity extends ChampionHandler {
    */
   default int getLatestDamageCountOrDefault() {
     return this.getLatestDamageCount().orElse(0);
-  }
-
-  /**
-   * 距离最近一次受到伤害的经过的刻
-   */
-  default Optional<Integer> getLatestDamageTime() {
-    return this.entity().getData(Attachments.DAMAGE_TIME);
-  }
-
-  default void setLatestDamageTime(int time) {
-    if (time > 0) {
-      this.entity().setData(Attachments.DAMAGE_TIME, Optional.of(time));
-    }
-  }
-
-  /**
-   * 距离最近一次受到伤害的经过的刻
-   */
-  default int getLatestDamageTimeOrDefault() {
-    return this.getLatestDamageTime().orElse(-1);
-  }
-
-  /**
-   *
-   * @return 获取最近一次伤害数据
-   */
-  default @Nullable Damage getLatestDamage() {
-    return this.getLatestDamageType()
-      .map(damageType -> new Damage(damageType, this.getLatestDamageCountOrDefault(), this.getLatestDamageTimeOrDefault(), this.getLatestDamageAmountOrDefault()))
-      .orElse(null);
   }
 
   /**
